<resources>
    <string name="app_name">Cc</string>
    <string name="button_next">ДАЛЕЕ</string>
    <string name="button_clearly">ПОНЯТНО</string>
    <string name="registration_first_entry_title">Добро пожаловать в приложение!</string>
    <string name="registration_first_entry_text">Чтобы не потерять данные, \n пройдите регистрацию</string>
    <string name="registration_first_entry_button_registration">ЗАРЕГЕСТРИРОВАТЬСЯ</string>
    <string name="registration_first_entry_button_auth">войти</string>
    <string name="registration_first_entry_conditions">Регистрируясь, вы принимаете\nУсловия использования и\nПолитику конфиденциальности</string>
    <string name="registration_actionBar">Регистрация</string>
    <string name="registration_goal_title">Ваша цель?</string>
    <string name="registration_goal_reduce">Снизить вес</string>
    <string name="registration_goal_dial">Набрать вес</string>
    <string name="registration_goal_support">Поддерживать вес</string>
    <string name="registration_lifestyle_1"><![CDATA[<b><big>Не занимаюсь спортом</big></b> <br><font color=\"#6A6A6A\">Сидячая работа, отсутствие физических нагрузок</font> ]]></string>
    <string name="registration_lifestyle_title">Ваш образ жизни?</string>
    <string name="registration_lifestyle_2"><![CDATA[<b><big>Занимаюсь спортом 1–2 раз в неделю</big></b> </br> <font color=\"#6A6A6A\">Совершаю пробежки или занимаюсь спортом 1–2 раза в неделю</font>]]></string>
    <string name="registration_lifestyle_3"><![CDATA[<b><big>Занимаюсь спортом 3–5 раз в неделю</big></b> <br><font color=\"#6A6A6A\">Бегаю или делаю тренировки 3–5 раз в неделю</font>]]></string>
    <string name="registration_lifestyle_4"><![CDATA[<b><big>Занимаюсь спортом почти каждый день</big></b> <br><font color=\"#6A6A6A\">Бегаю или занимаюсь спортом 6–7 раз в неделю</font>]]></string>
    <string name="registration_gender">Пол</string>
    <string name="registration_birthdate">Дата рождения</string>
    <string name="registration_height">Рост</string>
    <string name="registration_weight">Текущий вес</string>
    <string name="registration_weight_goal">Цель веса</string>
    <string name="registration_weight_unit">кг</string>
    <string name="registration_name_title">Укажите имя</string>
    <string name="registration_name_text">Имя будет отображаться в профиле.</string>
    <string name="registration_name_hint">Имя</string>
    <string name="registration_email_title">Электронная почта</string>
    <string name="registration_email_text">или используйте свой</string>
    <string name="registration_googleacc"> GOOGLE АККАУНТ</string>
    <string name="registration_pass_title">Придумайте пароль</string>
    <string name="registration_pass_text">Пароль должен содержать более 6 символов</string>
    <string name="registration_pass_title_second">Повторите пароль</string>
    <string name="registration_pass_text_wrong">Пароль введен неверно</string>
    <string name="registration_pass_text_ok">Пароль введен верно!</string>
    <string name="registration_success">Регистрация прошла успешно!</string>
    <string name="registration_success_text">На почту было отправлено письмо для подтверждения регистрации.</string>
    <string name="authorization_email_title">Введите электронную почту, указанную при регистрации</string>
    <string name="authorization_toolbar">Вход</string>
    <string name="authorization_email_hint">Электронная почта</string>
    <string name="authorization_email_text">или используйте свой</string>
    <string name="authorization_googleacc">Google аккаунт</string>
    <string name="authorization_pass_title">Укажите пароль</string>
    <string name="authorization_pass_hint">Пароль</string>
    <string name="authorization_pass_forget"><u>Забыли пароль?</u></string>
    <string name="authorization_success">Вход выполнен успешно</string>
    <string name="authorization_remind_title">Укажите электронную почту, указанную при регистрации</string>
    <string name="authorization_remind_send_success">На указанную почту было направлено письмо для восстановления пароля</string>
    <string name="authorization_remind_text_wrong">Пользователь с такой электронной почтой не найден</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_pass_hint">Пароль</string>
    <string name="tracker">Счетчик</string>
    <string name="recipe">Рецепты</string>
    <string name="sport">Спорт</string>
    <string name="profile">Профиль</string>
    <string name="networkerr">Нет сети</string>
    <string name="description">Описание</string>
    <string name="manual">Инструкции</string>
    <string name="default_web_client_idstr">396791155438-1r9kn0v9c66ae56uvsed4frfrg3fi19h.apps.googleusercontent.com</string>
    <string name="recipe_hint">Поиск рецептов</string>
    <string name="all">Все</string>
    <string name="recipe_1">План питания</string>
    <string name="recipe_2">Популярные рецепты</string>
    <string name="recipe_3">Добавленные рецепты</string>
    <string name="recipe_4">Завтраки</string>
    <string name="recipe_5">Обеды и ужины</string>
    <string name="recipe_6">Перекусы</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="all_diet">ALL</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="gluten_free_text"> Gluten Free: Eliminating gluten means avoiding wheat, barley, rye, and other gluten-containing grains and foods made from them (or that may have been cross contaminated).</string>
    <string name="ketogenic_text">  The keto diet is based more on the ratio of fat, protein, and carbs in the diet rather than specific ingredients. Generally speaking, high fat, protein-rich foods are acceptable and high carbohydrate foods are not.</string>
    <string name="vegetarian_text"> No ingredients may contain meat or meat by-products, such as bones or gelatin.</string>
    <string name="lacto_vegetarian_text"> All ingredients must be vegetarian and none of the ingredients can be or contain egg.</string>
    <string name="ovo_vegetarian_text"> All ingredients must be vegetarian and none of the ingredients can be or contain dairy.</string>
    <string name="vegan_text"> No ingredients may contain meat or meat by-products, such as bones or gelatin, nor may they contain eggs, dairy, or honey.</string>
    <string name="pescetarian_text"> Everything is allowed except meat and meat by-products - some pescetarians eat eggs and dairy, some do not.</string>
    <string name="paleo_text"> Allowed ingredients include meat (especially grass fed), fish, eggs, vegetables, some oils (e.g. coconut and olive oil), and in smaller quantities, fruit, nuts, and sweet potatoes. We also allow honey and maple syrup (popular in Paleo desserts, but strict Paleo followers may disagree). Ingredients not allowed include legumes (e.g. beans and lentils), grains, dairy, refined sugar, and processed foods.</string>
    <string name="primal_text">  Very similar to Paleo, except dairy is allowed - think raw and full fat milk, butter, ghee, etc.</string>
    <string name="whole30_text"> Allowed ingredients include meat, fish/seafood, eggs, vegetables, fresh fruit, coconut oil, olive oil, small amounts of dried fruit and nuts/seeds. Ingredients not allowed include added sweeteners (natural and artificial, except small amounts of fruit juice), dairy (except clarified butter or ghee), alcohol, grains, legumes (except green beans, sugar snap peas, and snow peas), and food additives, such as carrageenan, MSG, and sulfites.</string>
    <string name="all_text"> Какой то текст для диеты без ограничений </string>
    <string name="kkal"> ккал</string>
    <string name="weight_unit">кг</string>
</resources>