<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_tracker"
        android:icon="@drawable/tracker"
        android:title="@string/tracker" />

    <item
        android:id="@+id/menu_recipes"
        android:icon="@drawable/recipes"
        android:title="@string/recipe"
        />
    <item
        android:id="@+id/skip"
        android:checkable="false"
        android:checked="false"
        android:enabled="false"
        android:title=" "
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_sport"
        android:icon="@drawable/sport_timer"
        android:title="@string/sport" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

</menu>