<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signup.regfragments.GoalFragment1">

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/registration_email_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/edittext_selector"
        android:hint="@string/authorization_email_hint"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewText"
        style="@style/text_title_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:gravity="center"
        android:text="@string/registration_email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/buttonGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button_google"
        android:elevation="6dp"
        android:fontFamily="@font/roboto_bold"
        android:drawableStart="@drawable/ic_google_group"
        android:gravity="center"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:stateListAnimator="@null"
        android:text="@string/registration_googleacc"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:translationZ="4dp"
        android:drawablePadding="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewText" />

</androidx.constraintlayout.widget.ConstraintLayout>