<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signup.regfragments.GoalFragment1">

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/authorization_pass_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewText"
        style="@style/text_minim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:visibility="invisible"
        android:gravity="center"
        android:text="Сидячая работа, отсутствие физических \n нагрузок"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:background="@drawable/edittext_selector"
        android:hint="@string/registration_pass_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:ems="10"
        android:maxLines="1"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewText" />


    <TextView
        android:id="@+id/textViewrules"
        style="@style/text_nano"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/button_green"
        android:text="@string/authorization_pass_forget"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ImageView
        android:id="@+id/imageViewEye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eye_closed"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText" />


</androidx.constraintlayout.widget.ConstraintLayout>